--- a/surreal.nuspec
+++ b/surreal.nuspec
@@ -2,7 +2,7 @@
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>surrealdb</id>
+    <id>surreal</id>
     <version>1.0.0-beta7</version>
     <packageSourceUrl>https://github.com/ProphetLamb/surrealdb-choco</packageSourceUrl>
     <owners>ProhetLamb</owners>
