Remove version command from surrealdb test

--- a/.github/workflows/bump-choco.yml
+++ b/.github/workflows/bump-choco.yml
@@ -53,9 +53,9 @@ jobs:
         # Test whether we really have a working surrealdb executable
         working-directory: .
         run: Test-Package $Install
-      - name: SurrealDB Version
+      - name: SurrealDB Test
         run: |
-          tools/surreal.exe version
+          tools/surreal.exe
       - uses: EndBug/add-and-commit@v7
         # Checkin the changes to the repo
         with:
