--- a/.github/workflows/bump-choco.yml
+++ b/.github/workflows/bump-choco.yml
@@ -1,6 +1,9 @@
 name: Bump SurrealDB on Chocolatey
 
 on:
+  schedule:
+    # every Friday at 18:00 UTC
+    - cron: "0 18 * * FRI"
   workflow_dispatch:
     inputs:
       version:
@@ -17,21 +20,25 @@ jobs:
     name: Get Version
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.get_version.outputs.version }}
+      remote_version: ${{ steps.get_version.outputs.remote_version }}
+      current_version: ${{ steps.get_version.outputs.current_version }}
     steps:
       - name: Get version
         id: get_version
         run: |
-          version="${{ github.event.inputs.version }}"
+          remote_version="${{ github.event.inputs.version }}"
           if [[ -z "$version" ]]; then
             # grab latest version, if not specified
-            version=$(curl https://version.surrealdb.com)
+            remote_version=$(curl https://version.surrealdb.com)
           fi
-          echo "::set-output name=version::$version"
+          current_version=$(cat current.version | xargs)
+          echo "::set-output name=remote_version::$remote_version"
+          echo "::set-output name=current_version::$remote_version"
   chocolatey-bump:
-    # patch the repo and update the choco package
+    # patch the repo and update the choco package, if forced or version mismatch
     needs: get-version
-    name: Bump SurrealDB Chocolately
+    name: Bump SurrealDB Chocolatey
+    if: ${{github.event.inputs.force || needs.get-version.outputs.remote_version != needs.get-version.outputs.current_version }}
     runs-on: windows-latest
     defaults:
       run:
@@ -50,7 +57,7 @@ jobs:
         env:
           au_Push: "false"
           au_Force: ${{ github.event.inputs.force }}
-          SURREALDB_VERSION: ${{ needs.get-version.outputs.version }}
+          SURREALDB_VERSION: ${{ needs.get-version.outputs.remote_version }}
       - name: Test Package
         # Test whether we really have a working surrealdb executable
         working-directory: .
