--- a/.github/workflows/bump-choco.yml
+++ b/.github/workflows/bump-choco.yml
@@ -33,13 +33,14 @@ jobs:
             remote_version=$(curl https://version.surrealdb.com)
           fi
           current_version=$(cat current.version | xargs)
+          echo "version $current_version <-> $remote_version"
           echo "::set-output name=remote_version::$remote_version"
           echo "::set-output name=current_version::$remote_version"
   chocolatey-bump:
     # patch the repo and update the choco package, if forced or version mismatch
     needs: get-version
     name: Bump SurrealDB Chocolatey
-    if: ${{github.event.inputs.force || needs.get-version.outputs.remote_version != needs.get-version.outputs.current_version }}
+    if: ${{github.event.inputs.force != '' || needs.get-version.outputs.remote_version != needs.get-version.outputs.current_version }}
     runs-on: windows-latest
     defaults:
       run:
