--- a/.github/workflows/bump-choco.yml
+++ b/.github/workflows/bump-choco.yml
@@ -36,7 +36,7 @@ jobs:
           current_version=$(cat current.version | xargs)
           echo "::set-output name=remote_version::$remote_version"
           echo "::set-output name=current_version::$remote_version"
-          if [["$current_version" != "$remote_version"]]; then
+          if [[ "$current_version" != "$remote_version" ]]; then
             echo "version $current_version <-> $remote_version"
             echo "::set-output name=version_mismatch::$version_mismatch"
           fi
@@ -60,6 +60,7 @@ jobs:
         # download executable and patch version and checksums
         working-directory: .
         run: |
+          echo "Should run? ${{github.event.inputs.force != '' || needs.get-version.outputs.version_mismatch != '' }}"
           ./patch.ps1
         env:
           au_Push: "false"
