--- a/.github/workflows/bump-choco.yml
+++ b/.github/workflows/bump-choco.yml
@@ -56,7 +56,7 @@ jobs:
         # download executable and patch version and checksums
         working-directory: .
         run: |
-          echo "Should run? ${{github.event.inputs.force != 'true' || steps.get_version.outputs.current_version != steps.get_version.outputs.remote_version }}"
+          echo "Should run? ${{github.event.inputs.force == 'true' || steps.get_version.outputs.current_version != steps.get_version.outputs.remote_version }}"
           ./patch.ps1
         env:
           au_Push: "false"
