--- a/.github/workflows/bump-choco.yml
+++ b/.github/workflows/bump-choco.yml
@@ -41,7 +41,7 @@ jobs:
     # patch the repo and update the choco package, if forced or version mismatch
     needs: get-version
     name: Bump SurrealDB Chocolatey
-    if: ${{github.event.inputs.force != 'true' || needs.get-version.outputs.version_mismatch != '' }}
+    if: ${{ github.event.inputs.force == 'true' || needs.get-version.outputs.version_mismatch != '' }}
     runs-on: windows-latest
     defaults:
       run:
@@ -56,7 +56,7 @@ jobs:
         # download executable and patch version and checksums
         working-directory: .
         run: |
-          echo "Should run? ${{github.event.inputs.force == 'true' || steps.get_version.outputs.current_version != steps.get_version.outputs.remote_version }}"
+          echo "Should run? ${{ github.event.inputs.force == 'true' || steps.get_version.outputs.current_version != steps.get_version.outputs.remote_version }}"
           ./patch.ps1
         env:
           au_Push: "false"
