--- a/.github/workflows/bump-choco.yml
+++ b/.github/workflows/bump-choco.yml
@@ -33,9 +33,9 @@ jobs:
             remote_version=$(curl https://version.surrealdb.com)
           fi
           current_version=$(cat current.version | xargs)
-          echo "::set-output name=remote_version::$remote_version"
-          echo "::set-output name=current_version::$remote_version"
           echo "version $current_version <-> $remote_version"
+          echo "::set-output name=remote_version::$remote_version"
+          echo "::set-output name=current_version::$current_version"
 
   chocolatey-bump:
     # patch the repo and update the choco package, if forced or version mismatch
